--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alura flix</title>
-</head>
-<body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/IS1XHAJVURI?si=4EYJ6NVJfUxnvcNl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>GARBINA FOOD</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+
+	<body>
+		<div class="logomarca">
+			<img src="logo.jpeg" alt="logo da marca" class="imagem__logo">
+		</div>
+		<div class="principal">
+			<h1>Sobre a lanchonete</h1>
+			<div class="texto"></div>
+				<p>Localizada no coração da cidade a <strong>Garbina Food</strong> é uma lanchonete com um cardápio inovador! A melhor de toda a região. Fundada em 2020 e vem conquistando novos clientes a cada dia.</p>
+		
+
+				<p>Atendimento presencial de Terça à Domingo das 19:00 ás 00:00 horas.</p>
+			</div>
+		</div>
+
+		<div class="cardapio">
+			<h2>Cardápio</h2>
+		<div class="lista">
+			<ul>
+				<li class="itens"> <a href="https://www.google.com.br/">Lanches </a> </li>
+				<li class="itens"> <a href="#">Porções </a></li>
+				<li class="itens"> <a href="#">Bebidas </a> </li>
+				<li class="itens"> <a href="#">Sobremesas </a> </li>
+				<li class="itens"> <a href=" ">Vegetariano </a> </li>
+			</ul>
+
+			<img src="delivery.jpg" class="imagemdelivery">
+		</div>
+		</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IS1XHAJVURI?si=4EYJ6NVJfUxnvcNl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+	</body>
 </html>
