--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 				<li class="itens"> <a href="#">Sobremesas </a> </li>
 				<li class="itens"> <a href=" ">Vegetariano </a> </li>
 			</ul>
-
-			<img src="delivery.jpg" class="imagemdelivery">
-		</div>
-		</div>
+        </div>
+    </div>
+	<div class="video">	
+        <img src="delivery.jpg" class="imagemdelivery">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IS1XHAJVURI?si=4EYJ6NVJfUxnvcNl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	</div>
+		
+        
 
 	</body>
 </html>
