--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@
 
 		<div class="cardapio">
 			<h2>Cardápio</h2>
-		<div class="lista">
-			<ul>
-				<li class="itens"> <a href="https://www.google.com.br/">Lanches </a> </li>
-				<li class="itens"> <a href="#">Porções </a></li>
-				<li class="itens"> <a href="#">Bebidas </a> </li>
-				<li class="itens"> <a href="#">Sobremesas </a> </li>
-				<li class="itens"> <a href=" ">Vegetariano </a> </li>
-			</ul>
-        </div>
-    </div>
+
+            <button>Porções</button>
+            <button>Bebidas</button>
+            <button>Sobremesas</button>
+            <button>Vegetariano</button>
+   		</div>
+
 	<div class="video">	
         <img src="delivery.jpg" class="imagemdelivery">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IS1XHAJVURI?si=4EYJ6NVJfUxnvcNl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
