--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 		<div class="cardapio">
 			<h2>Cardápio</h2>
 
-            <button>Porções</button>
-            <button>Bebidas</button>
-            <button>Sobremesas</button>
-            <button>Vegetariano</button>
+            <button class="botao">Porções</button>
+            <button class="botao">Bebidas</button>
+            <button class="botao">Sobremesas</button>
+            <button class="botao">Vegetariano</button>
    		</div>
 
 	<div class="video">	
