--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
 		<div class="cardapio">
 			<h2>Cardápio</h2>
-
+        <div class="botoes">
             <button class="botao">Porções</button>
             <button class="botao">Bebidas</button>
             <button class="botao">Sobremesas</button>
             <button class="botao">Vegetariano</button>
+        </div>
    		</div>
 
 	<div class="video">	
