--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
    		</div>
 
-	<div class="video">	
+	<div class="propaganda">	
         <img src="delivery.jpg" class="imagemdelivery">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/IS1XHAJVURI?si=4EYJ6NVJfUxnvcNl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
